--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-gesture-handler": "^2.1.1",
     "react-native-safe-area-context": "^4.1.0",
-    "react-native-screens": "^3.13.0"
+    "react-native-screens": "^3.13.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
