--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-storage": "^1.0.1"
+    "react-native-storage": "^1.0.1",
+    "react-native-svg": "^12.3.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
