--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/art": "^1.2.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -18,8 +19,10 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-counters": "^1.2.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-pie-chart": "^2.0.2",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0",
     "react-native-splash-screen": "^3.3.0",
