--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-counters": "^1.2.0",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-pie-chart": "^2.0.2",
     "react-native-safe-area-context": "^4.1.0",
     "react-native-screens": "^3.13.0",
