--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "^3.13.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "^12.3.0"
+    "react-native-svg": "^12.3.0",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
