--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.3.0",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "react-otp-input": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.17.5",
