--- a/package.json
+++ b/package.json
@@ -10,36 +10,38 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-async-storage/async-storage": "^1.17.0",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
-    "axios": "^0.26.0",
+    "@twotalltotems/react-native-otp-input": "^1.3.11",
+    "axios": "^0.26.1",
     "formik": "^2.2.9",
     "react": "17.0.2",
-    "react-native": "0.67.3",
+    "react-native": "0.67.4",
     "react-native-counters": "^1.2.0",
     "react-native-feather": "^1.1.2",
-    "react-native-gesture-handler": "^2.2.0",
+    "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-pie-chart": "^2.0.2",
-    "react-native-safe-area-context": "^4.1.0",
-    "react-native-screens": "^3.13.0",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.3.0",
-    "react-navigation-stack": "^2.10.4",
-    "react-otp-input": "^2.4.0"
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "7.17.5",
-    "@babel/runtime": "7.17.2",
-    "@react-native-community/eslint-config": "2.0.0",
-    "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
-    "jest": "26.6.3",
-    "metro-react-native-babel-preset": "0.66.2",
+    "@babel/core": "7.17.8",
+    "@babel/runtime": "7.17.8",
+    "@react-native-community/eslint-config": "3.0.1",
+    "babel-jest": "27.5.1",
+    "eslint": "8.11.0",
+    "jest": "27.5.1",
+    "metro-react-native-babel-preset": "0.69.1",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
