--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-picker/picker": "^2.4.0",
+    "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -26,6 +27,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.11.2",
     "react-native-pie-chart": "^2.0.2",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
