--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.17.1",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^6.1.1",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
