--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.3.0",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
