--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-splash-screen": "^3.3.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.3.0",
+    "react-native-toast-message": "^2.1.5",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "yup": "^0.32.11"
