--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/datetimepicker": "^6.1.1",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
@@ -30,6 +31,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-paper": "^4.11.2",
     "react-native-pie-chart": "^2.0.2",
+    "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
