--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1",
+    "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.3.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^12.3.0",
